todo_app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
  # namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todoapp
  template:
    metadata:
      labels:
        app: todoapp
    spec:
      volumes:
        - name: images
          emptyDir: {}
      containers:
        - name: todoapp-backend
          image: TODO/BACK
          resources:
            requests:
              cpu: "250m"
              memory: "64Mi"
            limits:
              cpu: "500m"
              memory: "128Mi"
        - name: todoapp-frontend
          image: TODO/FRONT
          resources:
            requests:
              cpu: "250m"
              memory: "64Mi"
            limits:
              cpu: "500m"
              memory: "128Mi"
          volumeMounts:
            - name: images
              mountPath: /data
