todo_app/manifests/todo-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-db-svc
  # namespace: project
spec:
  type: ClusterIP
  #stateful sets expect the service to be headless (which allows for direct access to pods without proxying or load balancing)
  clusterIP: None
  selector:
    app: todo-db
  ports:
    - port: 4321
      protocol: TCP
      targetPort: 5432

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: todo-db-stset
  # namespace: project
spec:
  selector:
    matchLabels:
      app: todo-db
  serviceName: todo-db-svc
  replicas: 1
  template:
    metadata:
      labels:
        app: todo-db
    spec:
      containers:
      - name: todo-db
        image: postgres:18
        ports:
        - containerPort: 5432
          name: todo-db-port
        volumeMounts:
        - name: todo-db-vol
          mountPath: /data
  volumeClaimTemplates:
  - metadata:
      name: todo-db-vol
    spec:
      # GKE doesn't support local-path (which was used for k3d)
      # when storageClassName is commented out, the default (standard-rwo in this case) is used
      # storageClassName: local-path
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 256Mi
