todo_app/manifests/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: todo-front-route
  namespace: project
spec:
  parentRefs:
  - name: the-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: todoapp-svc
      port: 1234
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: todo-back-route
  namespace: project
spec:
  parentRefs:
  - name: the-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /todos
    backendRefs:
    - name: todoapp-svc
      port: 1235
